--- a/src/styles/sass/App.sass
+++ b/src/styles/sass/App.sass
@@ -33,6 +33,15 @@ html, body
     font-size: 100px
     font-weight: 200
     +unselectableText()
+    padding: 20px
+
+  h2
+    color: white
+    text-align: center
+    font-size: 40px
+    font-weight: 200
+    padding-top: 120px
+    +unselectableText()
 
   .splashLogoContainer
     text-align: center
@@ -50,16 +59,16 @@ html, body
   img
     height: 35px
     float: left
+    margin-top: 7px
 
   p
-    padding: 10px 0
+    padding: 13px 0 5px 0
     margin: 0
     font-size: 15px
     color: #eee
-    +unselectableText()    
+    +unselectableText()
 
   .topBarLogo
-    padding-top: 3px
 
   .topBarText
     text-align: center
@@ -67,6 +76,15 @@ html, body
   .topBarTitle
     text-align: left
     margin-left: 40px
+
+  .topBarLinks
+    list-style-type: none
+    float: right
+
+  .topBarLink
+    display: inline-block
+    margin-left: 40px
+
 
 .main
   height: 1000px
